# CS170-Project-2

./: CMakeLists.txt  CS170_Spring_2022_Large_data__106.txt  CS170_Spring_2022_Small_data__106.txt  main.cpp  parser.cpp  parser.h  sortingFunctions.cpp  sortingFunctions.h
