CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/small-test-dataset.txt
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Large-test-dataset.txt
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/CS170_Spring_2022_Large_data__106.txt
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/CS170_Spring_2022_Small_data__106.txt
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(main 
    "main.cpp" )
